# kr_ros2

./: README.md
kr_robot_description/: CMakeLists.txt  package.xml
kr_robot_description/kr810/urdf/: kr810_description.urdf.xacro
kr_robot_description/r6bot/urdf/: r6bot_description.urdf.xacro
kr_robot_driver/: CMakeLists.txt  kr_robot_driver.xml  package.xml
kr_robot_driver/bringup/config/: kr810_controller.yaml  r6bot_controller.yaml
kr_robot_driver/bringup/launch/: kr810_controller.launch.py  kr810_send_trajectory.launch.py  r6bot_controller.launch.py  send_trajectory.launch.py
kr_robot_driver/controller/: kr810_controller.cpp  r6bot_controller.cpp
kr_robot_driver/controller/include/kr_robot_driver/: kr810_controller.hpp  r6bot_controller.hpp
kr_robot_driver/description/launch/: view_kr810.launch.py  view_r6bot.launch.py
kr_robot_driver/description/ros2_control/: kr810.ros2_control.xacro  r6bot.ros2_control.xacro
kr_robot_driver/description/urdf/: kr810.urdf.xacro  r6bot.urdf.xacro
kr_robot_driver/hardware/: kr810_hardware.cpp  r6bot_hardware.cpp
kr_robot_driver/hardware/include/kr_robot_driver/: kr810_hardware.hpp  r6bot_hardware.hpp
kr_robot_driver/kord_api/: CMakeLists.txt
kr_robot_driver/kord_api/include/direct_control_example/polynomials/: from_constraints.h  polynomials.h  spline_computation.h  spline_equations.h
kr_robot_driver/kord_api/include/kord/: version.h  version.h.in
kr_robot_driver/kord_api/include/kord/api/: api_commands.h  api_request.h  connection_interface.h  kord.h  kord_control_interface.h  kord_io_request.h  kord_receive_interface.h
kr_robot_driver/kord_api/include/kord/utils/: endian.h  timex.h  utils.h  worker.h
kr_robot_driver/kord_api/src/api/: connection_interface.cpp  kord.cpp  kord_control_interface.cpp  kord_io_request.cpp  kord_receive_interface.cpp
kr_robot_driver/kord_api/src/utils/: timex.cpp  utils.cpp
kr_robot_driver/kord_api/src/utils/polynomials/: from_constraints.cpp  polynomials.cpp  spline_computation.cpp  spline_equations.cpp
kr_robot_driver/reference_generator/: send_trajectory.cpp
kr_robot_driver/test/: test_r6bot_controller_launch.py  test_urdf_xacro.py  test_view_robot_launch.py
